<resources>
    <string name="app_name">Movie</string>
    <string name="image_button_text">This is the poster</string>
    <string name="popularity_string">Sort by popularity</string>
    <string name="rating_string">Sort by rating</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="syno_test">On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach
        town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee,
        battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</string>
    <string name="error_message">No Internet, Please try again(Swipe down)</string>
    <string name="rating">Rating not available</string>
    <string name="plot">Plot not available</string>
    <string name="year">Year not available</string>
    <string name="popular">Popular movies</string>
    <string name="top">Top rated movies</string>
    <string name="fav">Make Favourite</string>
    <string name="fav_movies">Favourite Movies</string>
    <string name="rem_fav">Remove Favourite</string>
    <string name="play_string">Play </string>
    <string name="review_btn_string">Read Reviews</string>
    <string name="error_btn_detail">Try again</string>
    <string name="no_video_available">No video</string>
</resources>
