<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/reviewButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ImageView
            android:id="@+id/movie_poster_id"
            android:layout_width="170dp"
            android:layout_height="240dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/year_id"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2015" />

        <TextView
            android:id="@+id/rating_id"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="88dp"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8.1/10" />

        <Button
            android:id="@+id/fav_btn_id"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="284dp"
            android:text="@string/fav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/synopsis_id"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="392dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/syno_test" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailerRecyclerViewId"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_id">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/reviewBtnId"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="284dp"
            android:text="@string/review_btn_string"
            app:layout_constraintStart_toEndOf="@+id/fav_btn_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_error_tv_id"
            android:gravity="center"
            android:layout_width="272dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/error_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_id" />

        <Button
            android:id="@+id/detail_error_btn_id"
            android:text="@string/error_btn_detail"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_error_tv_id" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>